--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ buildscript
     dependencies
     {
         // For markdown -> html
-        classpath 'com.atlassian.commonmark:commonmark:0.9.0'
+        classpath 'com.atlassian.commonmark:commonmark:0.12.1'
         // To create a unified javadoc across submodules and top-level module:
         classpath 'com.netflix.nebula:gradle-aggregate-javadocs-plugin:3.0.1'
     }
@@ -30,13 +30,13 @@ plugins
     id 'org.openrepose.gradle.plugins.jaxb' version '2.5.0'
 
     // For ability to use git ids for versioning jar files:
-    id 'org.ajoberstar.grgit' version '1.7.2'
+    id 'org.ajoberstar.grgit' version '3.1.1'
 
     // To compile user documentation (not working: blows up on compileMarkdown)
     //id 'org.uulib.gradle.markdown' version '0.0.1'
 
     // To generate de/serialization classes for message bodies
-    id 'com.google.protobuf' version '0.8.5'
+    id 'com.google.protobuf' version '0.8.8'
 
     // To create trusted certificate files (.jks aka cacerts) from dir of .pem
     // (Not working: not friendly to our directory structure nor submodules)
@@ -134,7 +134,6 @@ subprojects
     {
         maxHeapSize = "3072m"
         testLogging.showStandardStreams = true
-
     }
 
     jar
@@ -158,12 +157,12 @@ project(':wres-util')
     {
         compile project(':wres-datamodel')
 
-        compile 'org.slf4j:slf4j-api:1.8.0-beta2'
+        compile 'org.slf4j:slf4j-api:1.8.0-beta4'
 
-        compile 'com.google.guava:guava:22.0'
+        compile 'com.google.guava:guava:27.1-jre'
         compile group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
 
-        compile('edu.ucar:cdm:5.0.0-alpha3')
+        compile('edu.ucar:cdm:5.0.0-beta6')
         {
             // Because we use slf4j, not jcl:
             exclude group: 'commons-logging', module: 'commons-logging'
@@ -172,16 +171,16 @@ project(':wres-util')
         runtime 'ch.qos.logback:logback-classic:1.3.0-alpha4'
 
         // Because cdm uses apache commons logging, bridge to slf4j
-        runtime 'org.slf4j:jcl-over-slf4j:1.8.0-beta2'
+        runtime 'org.slf4j:jcl-over-slf4j:1.8.0-beta4'
 
         testCompile 'junit:junit:4.12'
 
         // Mocking help
-        testCompile 'org.mockito:mockito-core:2.23.4'
+        testCompile 'org.mockito:mockito-core:2.27.0'
 
         // super-duper mocking help (mocking static, private methods)
-        testCompile 'org.powermock:powermock-api-mockito2:2.0.0'
-        testCompile 'org.powermock:powermock-module-junit4:2.0.0'
+        testCompile 'org.powermock:powermock-api-mockito2:2.0.2'
+        testCompile 'org.powermock:powermock-module-junit4:2.0.2'
 
         testCompile files('../libs/external/EVS.jar')
     }
@@ -192,32 +191,32 @@ project(':wres-system')
     dependencies
     {
         compile project(':wres-util')
-        compile 'org.slf4j:slf4j-api:1.8.0-beta2'
+        compile 'org.slf4j:slf4j-api:1.8.0-beta4'
 
-        compile 'com.google.guava:guava:22.0'
+        compile 'com.google.guava:guava:27.1-jre'
 
         // to use native postgres copy, need this on compile, otherwise runtime
         compile 'org.postgresql:postgresql:42.2.5'
         compile group: 'org.liquibase', name: 'liquibase-core', version: '3.6.3'
 
         // connection pooling:
-        compile 'com.mchange:c3p0:0.9.5.3'
+        compile 'com.mchange:c3p0:0.9.5.4'
 
         // Because org.postgresql:postgresql uses JUL logging, bridge it, here
         // at compile time because we need to expose a class to JUL.
-        compile 'org.slf4j:jul-to-slf4j:1.8.0-beta2'
+        compile 'org.slf4j:jul-to-slf4j:1.8.0-beta4'
 
         //JB @ 02/16/17
-        testCompile group: 'com.google.guava', name: 'guava-testlib', version: '21.0'
+        testCompile group: 'com.google.guava', name: 'guava-testlib', version: '27.1-jre'
 
         testCompile 'junit:junit:4.12'
 
         // Mocking help
-        testCompile 'org.mockito:mockito-core:2.23.4'
+        testCompile 'org.mockito:mockito-core:2.27.0'
 
         // super-duper mocking help (mocking static, private methods)
-        testCompile 'org.powermock:powermock-api-mockito2:2.0.0'
-        testCompile 'org.powermock:powermock-module-junit4:2.0.0'
+        testCompile 'org.powermock:powermock-api-mockito2:2.0.2'
+        testCompile 'org.powermock:powermock-module-junit4:2.0.2'
     }
 }
 
@@ -225,8 +224,8 @@ project(':wres-datamodel')
 {
     dependencies
     {
-        compile 'org.slf4j:slf4j-api:1.8.0-beta2'
-        compile 'org.apache.commons:commons-lang3:3.6'
+        compile 'org.slf4j:slf4j-api:1.8.0-beta4'
+        compile 'org.apache.commons:commons-lang3:3.9'
         compile group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
         compile project(':wres-config')
 
@@ -247,14 +246,14 @@ project(':wres-io')
         compile project(':wres-vis')
         compile project(':wres-grid')
 
-        compile 'org.slf4j:slf4j-api:1.8.0-beta2'
+        compile 'org.slf4j:slf4j-api:1.8.0-beta4'
         compile group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
-        compile 'org.glassfish.jersey.core:jersey-common:2.27'
-        compile 'org.glassfish.jersey.core:jersey-client:2.27'
-        compile 'org.glassfish.jersey.inject:jersey-hk2:2.27'
-        compile 'org.glassfish.jersey.media:jersey-media-json-jackson:2.27'
+        compile 'org.glassfish.jersey.core:jersey-common:2.28'
+        compile 'org.glassfish.jersey.core:jersey-client:2.28'
+        compile 'org.glassfish.jersey.inject:jersey-hk2:2.28'
+        compile 'org.glassfish.jersey.media:jersey-media-json-jackson:2.28'
 
-        compile('edu.ucar:cdm:5.0.0-alpha3')
+        compile('edu.ucar:cdm:5.0.0-beta6')
         {
             // Because we use slf4j, not jcl:
             exclude group: 'commons-logging', module: 'commons-logging'
@@ -275,7 +274,7 @@ project(':wres-io')
         compile 'org.postgresql:postgresql:42.2.5'
 
         // connection pooling:
-        compile 'com.mchange:c3p0:0.9.5.3'
+        compile 'com.mchange:c3p0:0.9.5.4'
 
         // wres.io.utilities uses javax.json.* imports
         compile 'org.glassfish:javax.json:1.1.4'
@@ -287,22 +286,22 @@ project(':wres-io')
         compile 'commons-codec:commons-codec:1.12'
 
         // Because org.postgresql:postgresql uses JUL logging, bridge at runtime
-        runtime 'org.slf4j:jul-to-slf4j:1.8.0-beta2'
+        runtime 'org.slf4j:jul-to-slf4j:1.8.0-beta4'
 
         // Because cdm and aws sdk uses apache commons logging, bridge to slf4j
-        runtime 'org.slf4j:jcl-over-slf4j:1.8.0-beta2'
+        runtime 'org.slf4j:jcl-over-slf4j:1.8.0-beta4'
 
         //JB @ 02/16/17
-        testCompile group: 'com.google.guava', name: 'guava-testlib', version: '21.0'
+        testCompile group: 'com.google.guava', name: 'guava-testlib', version: '27.1-jre'
 
         testCompile 'junit:junit:4.12'
 
         // Mocking help
-        testCompile 'org.mockito:mockito-core:2.23.4'
+        testCompile 'org.mockito:mockito-core:2.27.0'
 
         // super-duper mocking help (mocking static, private methods)
-        testCompile 'org.powermock:powermock-api-mockito2:2.0.0'
-        testCompile 'org.powermock:powermock-module-junit4:2.0.0'
+        testCompile 'org.powermock:powermock-api-mockito2:2.0.2'
+        testCompile 'org.powermock:powermock-module-junit4:2.0.2'
 
         // Use mockserver as a mock server for mock API responses
         testCompile 'org.mock-server:mockserver-netty:5.5.1'
@@ -325,11 +324,11 @@ project(':wres-metrics')
         compile project(':wres-datamodel')
         compile project(':wres-config')
         compile group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
-        compile 'org.slf4j:slf4j-api:1.8.0-beta2'
+        compile 'org.slf4j:slf4j-api:1.8.0-beta4'
 
         testCompile project (':wres-datamodel')
         testCompile 'junit:junit:4.12'
-        testCompile 'org.mockito:mockito-core:2.23.4'
+        testCompile 'org.mockito:mockito-core:2.27.0'
     }
 }
 
@@ -341,14 +340,14 @@ project(':wres-vis')
         compile project(':wres-config')
         compile project(':wres-util')        
 
-        compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.6'
-        compile group: 'com.sun.xml.fastinfoset', name: 'FastInfoset', version: '1.2.6'
-        compile 'com.google.guava:guava:22.0'
-        compile 'org.slf4j:slf4j-api:1.8.0-beta2'
+        compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
+        compile group: 'com.sun.xml.fastinfoset', name: 'FastInfoset', version: '1.2.16'
+        compile 'com.google.guava:guava:27.1-jre'
+        compile 'org.slf4j:slf4j-api:1.8.0-beta4'
         runtime 'ch.qos.logback:logback-classic:1.3.0-alpha4'
 
         // For ohdcommonchps.jar:
-        runtime group: 'org.slf4j', name: 'log4j-over-slf4j', version: '1.8.0-beta2'
+        runtime group: 'org.slf4j', name: 'log4j-over-slf4j', version: '1.8.0-beta4'
 
         compile files('../libs/external/jcommon-1.0.12.jar')
         compile files('../libs/external/jfreechart-1.0.9.jar')
@@ -361,7 +360,6 @@ project(':wres-vis')
         testCompile files('../libs/external/jfreechart-1.0.9.jar')
         testCompile files('../libs/external/EVS.jar')
         testRuntime files('dist/lib/conf')
-
     }
 
     configurations
@@ -380,7 +378,7 @@ project(':wres-config')
 
     dependencies
     {
-        compile 'org.slf4j:slf4j-api:1.8.0-beta2'
+        compile 'org.slf4j:slf4j-api:1.8.0-beta4'
 
         // For Java 9+ compatibility:
         compile 'jakarta.xml.bind:jakarta.xml.bind-api:2.3.2'
@@ -408,7 +406,7 @@ project(':wres-config')
 
         // jaxb-xjc transitively includes bind-api and jaxb-core
         jaxb 'org.glassfish.jaxb:jaxb-xjc:2.3.2'
-        jaxb 'com.github.sabomichal:immutable-xjc-plugin:1.4'
+        jaxb 'com.github.sabomichal:immutable-xjc-plugin:1.5'
     }
 
     def generatedIntermediateDir = "${project.buildDir}/generated"
@@ -478,8 +476,8 @@ project(':wres-grid')
         compile project(':wres-config')
         compile project(':wres-util')
         compile project(':wres-system')
-        compile 'org.slf4j:slf4j-api:1.8.0-beta2'
-        compile('edu.ucar:cdm:5.0.0-alpha3')
+        compile 'org.slf4j:slf4j-api:1.8.0-beta4'
+        compile('edu.ucar:cdm:5.0.0-beta6')
         {
             // Because we use slf4j, not jcl:
             exclude group: 'commons-logging', module: 'commons-logging'
@@ -488,7 +486,7 @@ project(':wres-grid')
         runtime 'ch.qos.logback:logback-classic:1.3.0-alpha4'
 
         // Because cdm uses apache commons logging, bridge to slf4j
-        runtime 'org.slf4j:jcl-over-slf4j:1.8.0-beta2'
+        runtime 'org.slf4j:jcl-over-slf4j:1.8.0-beta4'
 
         testCompile 'junit:junit:4.12'
     }
@@ -541,7 +539,7 @@ project(':wres-messages')
 
     dependencies
     {
-        compile 'org.slf4j:slf4j-api:1.8.0-beta2'
+        compile 'org.slf4j:slf4j-api:1.8.0-beta4'
         compile 'com.google.protobuf:protobuf-java:3.5.1'
 
         testCompile 'junit:junit:4.12'
@@ -554,8 +552,8 @@ project(':wres-worker')
     dependencies
     {
         compile project( ':wres-messages' )
-        compile 'org.slf4j:slf4j-api:1.8.0-beta2'
-        compile 'com.rabbitmq:amqp-client:5.2.0'
+        compile 'org.slf4j:slf4j-api:1.8.0-beta4'
+        compile 'com.rabbitmq:amqp-client:5.7.0'
         runtime 'ch.qos.logback:logback-classic:1.3.0-alpha4'
     }
 
@@ -594,8 +592,8 @@ project(':wres-tasker')
     dependencies
     {
         compile project( ':wres-messages' )
-        compile 'org.slf4j:slf4j-api:1.8.0-beta2'
-        compile 'com.rabbitmq:amqp-client:5.2.0'
+        compile 'org.slf4j:slf4j-api:1.8.0-beta4'
+        compile 'com.rabbitmq:amqp-client:5.7.0'
         compile 'javax.ws.rs:javax.ws.rs-api:2.1'
         compile 'javax.annotation:javax.annotation-api:1.3.2'
 
@@ -603,39 +601,40 @@ project(':wres-tasker')
         compile 'jakarta.xml.bind:jakarta.xml.bind-api:2.3.2'
 
         // Server library to run a web server:
-        compile 'org.eclipse.jetty:jetty-server:9.4.17.v20190418'
+        compile 'org.eclipse.jetty:jetty-server:9.4.18.v20190429'
 
         // Servlet container library to run a web application with:
-        compile 'org.eclipse.jetty:jetty-webapp:9.4.17.v20190418'
+        compile 'org.eclipse.jetty:jetty-webapp:9.4.18.v20190429'
 
         // Needed at compile-time to reference ServletContainer.class and
         // DefaultServlet.class
-        compile 'org.glassfish.jersey.containers:jersey-container-servlet-core:2.27'
+        compile 'org.glassfish.jersey.containers:jersey-container-servlet-core:2.28'
+        // Update the jetty-continuation depended upon by above jersey dep
+        compile 'org.eclipse.jetty:jetty-continuation:9.4.18.v20190429'
 
-        compile 'com.github.ben-manes.caffeine:caffeine:2.6.2'
+        compile 'com.github.ben-manes.caffeine:caffeine:2.7.0'
 
         // To accurately detect mime types of files.
         compile 'org.apache.tika:tika-core:1.20'
 
         runtime 'ch.qos.logback:logback-classic:1.3.0-alpha4'
-        runtime 'org.glassfish.jersey.core:jersey-server:2.27'
-        runtime 'org.glassfish.jersey.containers:jersey-container-jetty-http:2.27'
+        runtime 'org.glassfish.jersey.core:jersey-server:2.28'
 
         // Needed to prevent "java.lang.IllegalStateException: InjectionManagerFactory not found."
         // Thanks, https://luohuahuang.org/2017/11/13/jersey-illegalstateexception-injectionmanagerfactory/
-        runtime 'org.glassfish.jersey.inject:jersey-hk2:2.27'
+        runtime 'org.glassfish.jersey.inject:jersey-hk2:2.28'
 
         testCompile 'junit:junit:4.12'
 
         // To generate fake certificates and keys for testing
-        testCompile 'org.bouncycastle:bcpkix-jdk15on:1.60'
-        testCompile 'org.bouncycastle:bcprov-jdk15on:1.60'
+        testCompile 'org.bouncycastle:bcpkix-jdk15on:1.61'
+        testCompile 'org.bouncycastle:bcprov-jdk15on:1.61'
 
         // To test against an embedded AMQP broker
-        testCompile 'org.apache.qpid:qpid-broker-core:7.1.0'
+        testCompile 'org.apache.qpid:qpid-broker-core:7.1.2'
         // Provides support for both 0-8 and 0-9-1
-        testCompile 'org.apache.qpid:qpid-broker-plugins-amqp-0-8-protocol:7.1.0'
-        testCompile 'org.apache.qpid:qpid-broker-plugins-memory-store:7.1.0'
+        testCompile 'org.apache.qpid:qpid-broker-plugins-amqp-0-8-protocol:7.1.2'
+        testCompile 'org.apache.qpid:qpid-broker-plugins-memory-store:7.1.2'
     }
 
     apply plugin: 'application'
@@ -808,28 +807,30 @@ dependencies
     compile project(':wres-config')
     compile project(':wres-vis')
 
-    compile 'org.slf4j:slf4j-api:1.8.0-beta2'
+    compile 'org.slf4j:slf4j-api:1.8.0-beta4'
 
     compile 'javax.ws.rs:javax.ws.rs-api:2.1'
     compile 'javax.annotation:javax.annotation-api:1.3.2'
-    compile 'org.eclipse.jetty:jetty-server:9.4.17.v20190418'
-    compile 'org.eclipse.jetty:jetty-webapp:9.4.17.v20190418'
-    compile 'org.glassfish.jersey.containers:jersey-container-servlet-core:2.27'
+    compile 'org.eclipse.jetty:jetty-server:9.4.18.v20190429'
+    compile 'org.eclipse.jetty:jetty-webapp:9.4.18.v20190429'
+    compile 'org.glassfish.jersey.containers:jersey-container-servlet-core:2.28'
+    // Update the jetty-continuation that above jersey dep depends on
+    compile 'org.eclipse.jetty:jetty-continuation:9.4.18.v20190429'
 
-    compile 'com.github.ben-manes.caffeine:caffeine:2.6.2'
+    compile 'com.github.ben-manes.caffeine:caffeine:2.7.0'
 
-    runtime 'org.glassfish.jersey.core:jersey-server:2.27'
-    runtime 'org.glassfish.jersey.containers:jersey-container-jetty-http:2.27'
-    runtime 'org.glassfish.jersey.inject:jersey-hk2:2.27'
+    runtime 'org.glassfish.jersey.core:jersey-server:2.28'
+    runtime 'org.glassfish.jersey.containers:jersey-container-jetty-http:2.28'
+    runtime 'org.glassfish.jersey.inject:jersey-hk2:2.28'
 
     runtime 'ch.qos.logback:logback-classic:1.3.0-alpha4'
 
 
     testCompile group: 'commons-io', name: 'commons-io', version: '2.6'
-    testCompile group: 'com.google.guava', name: 'guava-testlib', version: '21.0'
-    testCompile group: 'com.google.guava', name: 'guava', version: '22.0'
+    testCompile group: 'com.google.guava', name: 'guava-testlib', version: '27.1-jre'
+    testCompile group: 'com.google.guava', name: 'guava', version: '27.1-jre'
     testCompile 'junit:junit:4.12'
-    testCompile 'org.mockito:mockito-core:2.23.4'
+    testCompile 'org.mockito:mockito-core:2.27.0'
 }
 
 sourceSets
