--- a/wres-eventsbroker/Dockerfile
+++ b/wres-eventsbroker/Dockerfile
@@ -24,7 +24,13 @@ RUN apk add tar && \
 
 #############
 # Final image
-FROM azul/zulu-openjdk-debian:11.0.11-11.48.21
+FROM registry.access.redhat.com/ubi8/ubi:8.4-199
+
+RUN dnf install -y \
+    java-11-openjdk-headless-1:11.0.11.0.9-2.el8_4  \
+    procps-ng-3.3.15-6.el8 \
+    iproute-5.9.0-4.el8 \
+    && dnf clean all
 
 # Set env vars expected by qpid
 ENV QPID_HOME=/usr/local
