--- a/wres-vis/Dockerfile
+++ b/wres-vis/Dockerfile
@@ -1,5 +1,5 @@
 # From a base image, make updates
-FROM registry.access.redhat.com/ubi8/ubi:8.4-199
+FROM registry.access.redhat.com/ubi8/ubi:8.4-203.1622660121
 
 RUN dnf install -y \
     java-11-openjdk-headless-1:11.0.11.0.9-2.el8_4  \
